package core.ms.portfolio.domain;

public enum ReservationStatus {
    PENDING,
    CONFIRMED,
    RELEASED
}
